# finite-difference

./: .gitignore  ADI_IMPLEMENTATION_GUIDE.md  ADI_STABILITY_FIXES.md  LICENSE  QUICK_START.md  README.md  git_ssh_key.pub  pyproject.toml  requirements.txt  test_adi_stability.py
.github/workflows/: ci.yml  publish.yml
finite_difference/: __init__.py  core.py
finite_difference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
finite_difference/solvers/: __init__.py  adi.py  american.py  crank_nicolson.py  explicit.py  implicit.py
notebooks/: 01_black_scholes_formula.ipynb  02_grid_and_boundary_conditions.ipynb  03_european_implicit.ipynb  04_european_crank_nicolson.ipynb  05_european_explicit.ipynb  06_accuracy_runtime_comparison.ipynb  07_american_put.ipynb  07_sabr_adi.ipynb  08_greeks.ipynb  09_barrier_options.ipynb  10_heston_adi.ipynb
src/: black_scholes.py  boundary_conditions.py  core.py  grid.py  payoff.py
src/solvers/: adi.py  american.py  crank_nicolson.py  explicit.py  implicit.py
tests/: conftest.py  test_adi_stability.py  test_american.py  test_black_scholes.py  test_european_solvers.py  test_sabr_adi.py
